Bug 350837: Clerar cx->throwing in [gosub] when pushing exception. r=brendan